Zbang.Cloudents.Mvc4WebRole/Content/Site/GeneralWithStatic.less
@import "variables.less";
@boxColor0: #64A9F8;
@boxColor1: #ff9853;
@boxColor2: #e775ce;
@boxColor3: #10b2c1;
@boxColor4: #848fa6;
@boxColor5: #f36f6e;
@boxColor6: #f76446;
@boxColor7: #73b435;
@boxColor8: #a55fff;
@boxColor9: #a27c22;
@boxColor10: #4faf61;

@iterations: 10;

.define(@var) {
    @colorSet: 'boxColor@{var}';
}


.mixin-loop (@index) when (@index >= 0) {
    .color@{index} {
        .define(@index);
        color: @@colorSet;

        &.border {
            border-color: @@colorSet;
        }

        &.background {
            background: @@colorSet;
        }

        &.fill {
            fill: @@colorSet;
        }
    }

    .color-parent@{index} {
        .define(@index);

        .child-color {
            color: @@colorSet;

            &.border {
                border-color: @@colorSet;
            }

            &.background {
                background: @@colorSet;
            }

            &.fill {
                fill: @@colorSet;
            }
        }
    }

    .mixin-loop(@index - 1);
}
//.mixin-loop (0) {}
.mixin-loop(@iterations);

.lowercase {
    text-transform: lowercase;
}

.capitalize {
    text-transform: capitalize !important; //override angular material
}

.upper-case {
    text-transform: uppercase;
}

button {
    border: 0;
    background: transparent;
    outline: none;
}

a {
    &:hover, &:focus {
        text-decoration: none;
    }
}

input, li, [contenteditable], span, textarea, [role="button"] {
    outline: 0;
}

html {
    background: transparent;
}

body {
    //this cause the md dialog not to show on scroll page
    //max-width: 100vw;
    //overflow-x: hidden; //this cause the md dialog not to show on scroll page
    //For header collapse in itemPage
    margin-top: 0;
    .transition(margin-top, 0.2s, ease);
}




//.mdno-touchevents {
::-webkit-scrollbar-track {
    border: none;
}

::-webkit-scrollbar {
    width: 10px;
    height: 6px;
}

::-webkit-scrollbar-thumb {
    border-radius: 5px;
    background: @scrollbarColor;
}
//}



//google sign in fix
#ssIFrame_google {
    left: -9999px !important;
}

//footer arrow up

.page-footer {
    .scroll-to-top {
        -moz-transform: rotate(270deg) /*rtl:ignore*/;
        -ms-transform: rotate(270deg) /*rtl:ignore*/;
        -o-transform: rotate(270deg) /*rtl:ignore*/;
        -webkit-transform: rotate(270deg) /*rtl:ignore*/;
        transform: rotate(270deg) /*rtl:ignore*/;

        svg {
            width: 32px;
            height: 32px;
            fill: @borderColorBlue;
        }
    }
}

.suggested .box-style {
    position: relative;
}

.box-template-flex {
    .displayFlex !important;
    .align-items(stretch) !important;
    .justifyContet(space-between) !important;
    flex-direction: column !important;
    padding: 10px !important;

    > * {
        box-sizing: border-box;
    }

    .info {
        color: @textColorBlack;
        flex-grow: 1;
        .displayFlex;
        .align-items(flex-start);
        .justifyContet(space-between);
        flex-direction: column;

        .top {
            .displayFlex;
            .align-items(center);
            .justifyContet(flex-start);

            .icon {
                width: 60px;
                height: 60px;
                line-height: 60px;
                text-align: center;
                color: @textColorWhite;
                font-size: 28px;
                text-transform: capitalize;
                flex-shrink: 0;
            }

            h5 {
                font-size: 22px;
                line-height: 29px;
                height: 58px;
                margin: 0;
                padding: 0 10px;
                text-transform: capitalize;
                font-weight: normal;
            }
        }

        .bottom span {
            font-size: 12px;
            display: block;
            margin-top: 5px;
        }
    }

    .stats {
        border-top: 1px solid;
        .displayFlex;
        .align-items(center);
        .justifyContet(space-between);
        padding-top: 10px;
        margin-top: 10px;
        height: 24px;
        font-size: 12px;

        .members-count, .items-count {
            color: @textColorBlack;
        }
    }
}

.box-style {
    width: 100%;
    background: @textColorWhite;
    box-shadow: 0px 1px 5px 0 rgba(0, 0, 0, 0.34);
    display: block;
    width: 100%;
    height: 179px;
    line-height: 1;
    color: @textColorBlack;

    &:not(.leaderboardbox):not(.box-style-form):not(.active):hover {
        background: #f0f0f0;

        .wrapper {
            .icon {
                fill: @buttonColorBlue;
            }

            span {
                color: @buttonColorBlue;
            }
        }
    }

    &#createCourse {
        padding-bottom: 16px;

        md-input-container {
            margin-bottom: 12px;
        }

        .md-errors-spacer {
            display: none;
        }
    }

    &.action {
        border-radius: 4px;
        height: auto;
        padding: 8px 0;
    }
    //.box-cube, .unibox, .leaderboard, .suggested a{
    &.active {
        background: @buttonColorBlue;

        .wrapper {
            .text {
                color: @textColorWhite;
            }

            .icon {
                fill: @textColorWhite;
            }
        }
    }

    &:not(.active):hover {
        .wrapper {
            .icon {
                fill: @buttonColorBlue !important;
            }

            span {
                color: @buttonColorBlue !important;
            }
        }
    }

    .wrapper {
        .displayFlex();
        .align-items(center);
        .justifyContet(center);

        .icon {
            fill: @buttonColorBlue;
            margin-right: 10px;
        }

        .text {
            color: @buttonColorBlue;
            font-size: 14px;
        }

        span {
            line-height: normal;
            padding-right: 6px;
        }
    }
}

#intercom-container, #intercom-launcher {
    z-index: 120;
}

/*#region: multi line ellipsis classes*/
.multi-line-ellipsis {
    overflow: hidden;
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -ms-word-break: break-word;
    word-break: break-word;


    &.limit-three {
        -webkit-line-clamp: 3;
    }


    &.limit-two {
        -webkit-line-clamp: 2;
    }
}

/*#endregion*/


/*#region: new button classes*/
.action-btn, .signin-header-btn {
    .general-button();
    .colored-button(@buttonColorBlue, @textColorWhite);
    .colored-button-hover(@buttonColorBlueHover, @textColorWhite);
    .colored-button-disabled(@buttonColorBlueHover, @textColorDisabledActionButton);
}

.cancel-btn, .signup-header-btn {
    .general-button();
    .colored-button(@buttonColorCancel, @textColorBlack);
    .colored-button-hover(@buttonColorCancelHover, @textColorBlack);
    .colored-button-disabled(@buttonColorCancelDisabled, @textColorDisabledCancelButton);
}
/*#endregion*/

